--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "files.associations": {
+    "vector": "cpp",
+    "iostream": "cpp",
     "array": "cpp",
     "atomic": "cpp",
     "bit": "cpp",
@@ -7,7 +9,8 @@
     "cctype": "cpp",
     "clocale": "cpp",
     "cmath": "cpp",
-    "cstdarg": "cpp",
+    "compare": "cpp",
+    "concepts": "cpp",
     "cstddef": "cpp",
     "cstdint": "cpp",
     "cstdio": "cpp",
@@ -15,8 +18,8 @@
     "cwchar": "cpp",
     "cwctype": "cpp",
     "deque": "cpp",
+    "string": "cpp",
     "unordered_map": "cpp",
-    "vector": "cpp",
     "exception": "cpp",
     "algorithm": "cpp",
     "functional": "cpp",
@@ -26,24 +29,20 @@
     "numeric": "cpp",
     "optional": "cpp",
     "random": "cpp",
-    "string": "cpp",
     "string_view": "cpp",
     "system_error": "cpp",
     "tuple": "cpp",
     "type_traits": "cpp",
     "utility": "cpp",
-    "fstream": "cpp",
     "initializer_list": "cpp",
     "iosfwd": "cpp",
-    "iostream": "cpp",
     "istream": "cpp",
     "limits": "cpp",
     "new": "cpp",
+    "numbers": "cpp",
     "ostream": "cpp",
-    "sstream": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
     "typeinfo": "cpp"
-  },
-  "C_Cpp.errorSquiggles": "disabled"
+  }
 }
